--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.4",
     "firebase": "^9.12.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
     "sweetalert2": "^11.5.1"
